many many buggggg

--- a/1612323_1612414_1612415/1612323_1612414_1612415.vcxproj
+++ b/1612323_1612414_1612415/1612323_1612414_1612415.vcxproj
@@ -115,6 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\BitOperator.cpp" />
+    <ClCompile Include="..\..\QInt.cpp" />
+    <ClCompile Include="..\..\Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\FIX_BUG.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\QInt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
